--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build site
         run: |
           cd gh-pages/ont-open-datasets-site
-          gatsby build
+          gatsby build --prefix-paths
       - name: Move files
         run: |
           cd gh-pages
