--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Move files
         run: |
           cd gh-pages
-          mv ont-open-datasets-site/public/* ./
+          cp -r ont-open-datasets-site/public/* ./
       - name: Commit updated site static build
         run: |
           cd gh-pages
