Update workflow to add trailing slash

--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -30,7 +30,7 @@ jobs:
           gatsby build --prefix-paths
       - name: Move files
         run: |
-          cp -r master/public/* gh-pages
+          cp -r master/public/* gh-pages/
       - name: Commit updated site static build
         run: |
           cd gh-pages
