--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-transformer-sharp": "^2.5.15",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
+    "react-cookie-consent": "^6.2.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
